fix z-index issue with panel menu on mobile

--- a/assets/sass/atoms/_overlays.scss
+++ b/assets/sass/atoms/_overlays.scss
@@ -14,7 +14,7 @@
 
   &.open {
     position: fixed;
-    z-index: 1999;
+    z-index: $zindex-modal + 5;
     top: 0px;
     bottom: 0px;
     left: 0px;
